crates/ruff_formatter/src/snapshots/formatter_syntax_error.snap
---
source: crates/ruff_formatter/src/diagnostics.rs
expression: content
---
example.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Syntax error.



